welcome.lessons.welcome.array.search.IndexOfValue.scala.error
indexOfValue:4: error: ')' expected but 'return' found.
    return(i)
    ^